--- a/conf/configES.json
+++ b/conf/configES.json
@@ -2,7 +2,7 @@
 	"sitio": ["ATI","[UCV]","2025-1"],
 	"home": "Inicio",
 	"login": "Entrar",
-	"copyRight":"Copyright © 2024 Escuela de computación - ATI. Todos los derechos reservados",
+	"copyRight":"Copyright © 2025 Escuela de computación - ATI. Todos los derechos reservados",
 	"nombre":"Nombre",
 	"descripcion":"",
 	"color":"Mi color favorito es:",
@@ -12,5 +12,5 @@
 	"lenguajes":"Lenguajes aprendidos:",
 	"email":"Si necesitan comunicarse conmigo me pueden escribir a ",
 	"buscar": "Buscar",
-	"saludo": "Hola, Carlos"
+	"saludo": "Hola"
 }
