--- a/conf/configPT.json
+++ b/conf/configPT.json
@@ -1,8 +1,8 @@
-const config = {
-	"sitio": ["ATI","[UCV]","2024-1"],
+ {
+	"sitio": ["ATI","[UCV]","2025-1"],
 	"home": "Início",
 	"login": "Sessão",
-	"copyRight":"Copyright © 2024 Escola de informática - ATI. Todos os direitos reservados",
+	"copyRight":"Copyright © 2025 Escola de informática - ATI. Todos os direitos reservados",
 	"nombre":"Nome",
 	"descripcion":"",
 	"color":"Minha cor favorita é",
@@ -10,7 +10,7 @@ const config = {
 	"musica":"Meu estilo de música favorita",
 	"video_juego":"Jogos de vídeo favoritos",
 	"lenguajes":"Linguagems aprendidas",
-	"email":"Se precisar me contatar pode me escrever em [email]",
+	"email":"Se precisar me contatar pode me escrever em ",
 	"buscar": "Procurar",
 	"saludo": "Olá"
 }
